[workspace]
members = [
    "applied-config",
    "json-schema",
    "keycloak",
    "observability",
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.10.2"
anyhow = "1.0.96"
assertables = "9.5.0"
assert-json-diff = "2.0.2"
backon = "1.3.0"
reqwest = "0.12.15"
serde = "1.0.218"
serde_json = "1.0.139"
tokio = "1.44.1"
tokio-stream = "0.1.17"
tracing = "0.1.41"
