[package]
name = "flexys-observability"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
valuable = { version = "0.1.1", features = ["derive"] }
valuable-serde = "0.1.1"
